Fix positioning of tip elements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </form>
       </form>
       <div class="options">
-        <div class="centerB">
+        <div class="percentages">
         <button class="button1 bouncy" onclick="calculateTip()">15%</button>
         <button class="button1 bouncy" onclick="calculateTipB()" style="animation-delay: 0.07s;">
           20%
