--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
+    <script src="index.js"></script>
     <title>Tip Calculator</title>
   </head>
   <body>
@@ -14,35 +15,22 @@
         <label for="bill">Bill: </label>
         <input id="bill" type="number" name="bill" />
       </div>
-        </form>
       </form>
       <div class="options">
         <div class="percentages">
-        <button class="button1 bouncy" onclick="calculateTip()">15%</button>
-        <button class="button1 bouncy" onclick="calculateTipB()" style="animation-delay: 0.07s;">
+        <button onclick="calculateTip(15)">15%</button>
+        <button onclick="calculateTip(20)">
           20%
         </button>
-        <button class="button1 bouncy" onclick="calculateTipC()" style="animation-delay: 0.014s;">
+        <button onclick="calculateTip(25)">
           25%
         </button>
-        <p id="demo">
-          <div class="centerC">
+        <p id="tip">
+          <div>
           </div>
         </p>
-        <!--
-        <input
-          type="number"
-          id="myNumber"
-          value="0.0"
-          class="button1 bouncy"
-          style="animation-delay: 0.021s;"
-        />
-        -->
       </div>
       </div>
     </div>
-
-
-    <script src="index.js"></script>
   </body>
 </html>
